archive/kubernetes/apps/default/syncthing/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    labels: &labels
      app.kubernetes.io/part-of: syncthing
      app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      volumes:
        - name: storage
          hostPath:
            path: /mnt/storage
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
      containers:
        - name: syncthing
          image: syncthing/syncthing:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8384
              protocol: TCP
              name: webui
            - containerPort: 22000
              protocol: TCP
              name: tcp
            - containerPort: 22000
              protocol: UDP
              name: quic
            - containerPort: 21027
              protocol: UDP
              name: discovery
          volumeMounts:
            - name: storage
              mountPath: /storage
            - name: config
              mountPath: /var/syncthing
