archive/kubernetes/apps/default/syncthing/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: 'syncthing'
    metallb.universe.tf/loadBalancerIPs: 192.168.2.208
  labels:
    app.kubernetes.io/part-of: syncthing
    app.kubernetes.io/name: syncthing
spec:
  type: LoadBalancer
  loadBalancerClass: metallb
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/part-of: syncthing
    app.kubernetes.io/name: syncthing
  ports:
    - name: webui
      port: 8384
      protocol: TCP
      targetPort: webui
    - name: tcp
      port: 22000
      protocol: TCP
      targetPort: tcp
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: 'syncthing'
    metallb.universe.tf/loadBalancerIPs: 192.168.2.208
  labels:
    app.kubernetes.io/part-of: syncthing
    app.kubernetes.io/name: syncthing
spec:
  type: LoadBalancer
  loadBalancerClass: metallb
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/part-of: syncthing
    app.kubernetes.io/name: syncthing
  ports:
    - name: quic
      port: 22000
      protocol: UDP
      targetPort: quic
    - name: discovery
      port: 21027
      protocol: UDP
      targetPort: discovery
